# cookiecutter-pyproject

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{ cookiecutter.project_slug }}/: .envrc  .pre-commit-config.yaml  README.md  gitignore  pyproject.toml
